// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render correctly 1`] = `
.c2 {
  display: block;
  padding-bottom: 0.2rem;
  color: #5e5e5e;
  font-size: 0.7rem;
  line-height: 1;
}

.c0 {
  position: absolute;
  opacity: 0;
}

.c0 + .c1 {
  display: inline-block;
  position: relative;
  padding: 0;
  color: #444444 !important;
  cursor: pointer;
}

.c0 + .c1::before {
  content: '';
  display: inline-block;
  width: 16px;
  height: 16px;
  margin-right: 0.2rem;
  border: 0.05rem solid;
  border-radius: 0.2rem;
  background: white;
  vertical-align: text-bottom;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border-color: #191723;
}

.c0:focus + .c1::before {
  box-shadow: 0 0 0 0.1rem rgba(25,23,35,0.2);
}

.c0:checked + .c1::before {
  background-color: #191723;
}

.c0:disabled + .c1 {
  opacity: 0.5;
  cursor: auto;
  pointer-events: none;
}

.c0:disabled + .c1::before {
  opacity: 0.5;
}

.c0:checked + .c1::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 6px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

<div>
  <Checkbox
    bg="primary"
    borderColor="primary"
    disabled={false}
    id="checkbox"
  >
    <input
      className="c0"
      disabled={false}
      id="checkbox"
      type="checkbox"
    />
  </Checkbox>
  <Label
    htmlFor="checkbox"
  >
    <label
      className="c1 c2"
      htmlFor="checkbox"
    >
      Checkbox
    </label>
  </Label>
</div>
`;

exports[`Checkbox should render with props disabled 1`] = `
.c2 {
  display: block;
  padding-bottom: 0.2rem;
  color: #5e5e5e;
  font-size: 0.7rem;
  line-height: 1;
}

.c0 {
  position: absolute;
  opacity: 0;
}

.c0 + .c1 {
  display: inline-block;
  position: relative;
  padding: 0;
  color: #444444 !important;
  cursor: pointer;
}

.c0 + .c1::before {
  content: '';
  display: inline-block;
  width: 16px;
  height: 16px;
  margin-right: 0.2rem;
  border: 0.05rem solid;
  border-radius: 0.2rem;
  background: white;
  vertical-align: text-bottom;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border-color: #191723;
}

.c0:focus + .c1::before {
  box-shadow: 0 0 0 0.1rem rgba(25,23,35,0.2);
}

.c0:checked + .c1::before {
  background-color: #191723;
}

.c0:disabled + .c1 {
  opacity: 0.5;
  cursor: auto;
  pointer-events: none;
}

.c0:disabled + .c1::before {
  opacity: 0.5;
}

.c0:checked + .c1::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 6px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

<div>
  <Checkbox
    bg="primary"
    borderColor="primary"
    disabled={true}
    id="checkbox"
  >
    <input
      className="c0"
      disabled={true}
      id="checkbox"
      type="checkbox"
    />
  </Checkbox>
  <Label
    htmlFor="checkbox"
  >
    <label
      className="c1 c2"
      htmlFor="checkbox"
    >
      Checkbox
    </label>
  </Label>
</div>
`;
